# verifiable-ml-market

./: .gitignore  ARCHITECTURE.md  README.md
docker/: docker-compose.yml
python-models/: requirements.txt
python-models/adapters/: __init__.py  base.py  http_adapter.py
python-models/models/: __init__.py  lstm_model.py  xgboost_model.py
rust-pipeline/: Cargo.toml
rust-pipeline/src/: lib.rs  main.rs  substrate_client.rs
rust-pipeline/src/api/: mod.rs  server.rs
rust-pipeline/src/core/: ensemble.rs  feature_engine.rs  mod.rs  types.rs
rust-pipeline/src/ingestion/: mod.rs  offchain_source.rs  onchain_source.rs
rust-pipeline/src/provenance/: commitment.rs  hasher.rs  mod.rs
rust-pipeline/tests/: integration_tests.rs
substrate-node/: Cargo.toml
substrate-node/node/: Cargo.toml
substrate-node/node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
substrate-node/pallets/prediction-market/: Cargo.toml
substrate-node/pallets/prediction-market/src/: lib.rs
substrate-node/pallets/verification/: Cargo.toml
substrate-node/pallets/verification/src/: lib.rs
substrate-node/runtime/: Cargo.toml
substrate-node/runtime/src/: lib.rs
