[package]
name = "verifiable-ml-pipeline"
version = "0.1.0"
edition = "2021"
authors = ["Tetsurou Kizaki"]
description = "High-performance ML pipeline with verifiable inference for decentralised prediction markets"
license = "MIT"

[lib]
name = "vml_pipeline"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vml-server"
path = "src/main.rs"
required-features = ["http"]

[features]
default = ["http"]
http = ["axum", "tokio", "tower", "tower-http"]
python = ["pyo3"]
substrate = ["subxt", "sp-core"]

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"

# Parallel processing
rayon = "1.10"

# Cryptography (provenance & commitments)
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# HTTP API (optional)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

# PyO3 (optional)
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

# Substrate client (optional)
subxt = { version = "0.38", optional = true }
sp-core = { version = "34.0", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CSV / data handling
csv = "1.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
