[workspace]
members = ["node", "runtime", "pallets/verification", "pallets/prediction-market"]
resolver = "2"

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

# FRAME pallets and support
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }

# Standard pallets
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }

# Substrate primitives
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }

# Substrate client
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

# Substrate utilities
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
